# POrchestrator

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: documents.rs  images.rs  lib.rs  llm.rs  main.rs  models.rs  presentation.rs
src/lib/: contracts.ts
