[package]
name = "porchestrator"
version = "0.1.0"
description = "Porchestrator desktop app"
authors = ["bea1e"]
edition = "2024"

[lib]
name = "porchestrator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
pdf-extract = "0.10.0"
ppt-rs = "0.2.6"
quick-xml = "0.39.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
zip = "8.2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
